--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=1a3383dbf75320c6a1ef6c6b8da67480",
+    "/css/app.css": "/css/app.css?id=0a97e9faf6be8fc9f144f576553905af"
 }
